--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ body {
 ol, ul {
 	list-style: none;
 }
+
+/*
+
 blockquote, q {
 	quotes: none;
 }
@@ -41,53 +44,60 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+*/
 
 body {
-	background-color: Lightgray;
-	font-family: sans-serif;
-}
-
-div {
-	border: 1px dashed black;
+    /*background-color: LightGray;*/
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
 }
 
 /* Navigation Section */
 .content {
-	padding: 0 15px;
-	width: 970px;
-	height: 70px;
+	padding: 0 0.938rem;
 	margin: 0 auto;
+	min-width: 37.5rem;
+}
+
+:focus {
+	outline: none;
 }
 
 
 .top-navigation {
 	background-color: #fff;
+	position: fixed;
+	width: 100%;
+	border-bottom: 1px solid #DDD;
+	z-index: 9999;
 }
 
 .top-navigation > .content {
-	
+	height: 4.375rem;
+}
+
+.top-navigation .logo {
+	height: 4.375rem;
 }
 
 .top-navigation .links {
 	float: right;
 	font-family: 'Roboto', sans-serif;
 	color: #838994;
-	font-size: 16px;
-	margin-top: 25px;
-	-webkit-font-smoothing: antialiased;
+	font-size: 1.04rem;
+	margin-top: 1.7rem;
+/*	-webkit-font-smoothing: antialiased;  */
 }
-
 
 .top-navigation .links li{
 	display: inline-block;
-	margin-left: 25px
+	margin-left: 1.563rem;
 }
 
 
-.top-navigation .links > .active {
+.top-navigation .links li.active {
 	color: #4c5058;
-	font-weight: 600;
+	font-weight: 500;
 }
 
 .top-navigation .links li:hover {
@@ -96,9 +106,7 @@ div {
 }
 
 
-.top-navigation .logo {
-	height: 70px;
-}
+
 
 .introduction {
 	background-image: url('../images/first-background copy.jpg');
@@ -106,32 +114,144 @@ div {
     background-repeat: no-repeat;
     background-size: cover;
     height: 45.938rem;
+    overflow: auto;
 }
 
-.big-button {
-	text-shadow: none;
-	border-style: none;
-	border-radius: 4px;
-	padding: 16px 26px;
-	line-height: 1.33;
-	background-color: green;
-	font-size: 16px;
-	color: blue;
-	display: block;
-	margin: 0 auto;
+.introduction h1,
+.introduction h3 {
+	color: white;
+	text-align: center;
+	font-weight: 300;
+}
+
+.introduction h1 {
+	margin-top: 17.5rem;
+	font-size: 3.125rem;
+}
+
+.introduction h3 {
+	margin-top: 1.25rem;
+	font-size: 1.563rem;
+}
+
+
+
+.introduction .buttons {
+	color: white;
+	text-align: center;
+	margin-top: 1.563rem;
+}
+
+.introduction .half {
+	width: 49%;
+	padding: 0 0.938rem;
+	display: inline-block;
+	vertical-align: bottom;
+	font-size: 1.125rem;
+	line-height: 1.2;
+}
+
+
+.cases {
+	background-color: #fff;
+	overflow: hidden;
+	padding-bottom: 5rem;
+}
+
+.cases .content {
+	margin-top: 7.875rem;
+	padding: none;
+	color: #1d1e21;
+	text-align: center;
+}
+
+.cases h2 {
+	font-size: 2.75rem;
+	margin: 1.625rem 0 3.125rem;
+	font-weight: 300;
+}
+
+.cases .devices > li {
+	width: 33.3333333%;
+	float: left;
+}
+
+.cases .devices h3 {
+	font-weight: 400;
+	font-size: 1.563rem;
+	margin: 2.5rem 0px 1.875rem;
+}
+
+.cases .devices p{
+	font-weight: 300;
+	font-size: 1.313rem;
+}
+
+
+.social {
+	background-color: #fff;
+	overflow: auto;
+	padding-bottom: 9.375rem;
+	text-align: center;
+}
+
+.social hr {
+	border: 0;
+	border-top: 1px solid #eaebec;
+	margin: 1.313rem 0;
+}
+
+.social .icons > li{
+	border-radius: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	display: inline-block;
+	margin: 1.25rem 5px;
+	border: 1px solid #eaebec;
+	padding: 0.625rem 0;
+	text-align: center;
+}
+
+.social .icons > li:hover {
 	cursor: pointer;
 }
 
-.introduction .content {
-	color: red;
+.social .twitter {
+	color: #55acee;
+}
+
+.social .facebook {
+	color: #4c66a4;
+}
+
+.social .instagram {
+	color: #3f729b;
+}
+
+.social .copy {
+	font-size: 0.9rem;
+	font-weight: 300;
+	color: #838994;
 }
 
 
+button {
+	width: 9.688rem;
+	background-color: #f15a29;
+	border-color: #f15a29;
+	text-shadow: none;
+	border-style: none;
+	border-radius: 4px;
+	padding: 1rem 1.5rem;
+	color: white;
+	font-size: 1.125rem;
+}
 
-
-
-
-
+button:hover {
+	background-color: #d9400e;
+	border-color: #cf3d0e;
+	cursor: pointer;
+}
 
 
 
